[package]
name = "oxyfy"
version = "0.0.1"
authors = ["Viktor Lazarev <taurus101v@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.10"

[patch.crates-io]
"vulkano" = { git = "https://github.com/Abendstolz/vulkano.git", rev = "5db99c837330f3a0656e9c6827a1fde24421465b" }
"vulkano-win" = { git = "https://github.com/Abendstolz/vulkano.git", rev = "5db99c837330f3a0656e9c6827a1fde24421465b" }
"vulkano-shaders" = { git = "https://github.com/Abendstolz/vulkano.git", rev = "5db99c837330f3a0656e9c6827a1fde24421465b" }
"vk-sys" = { git = "https://github.com/Abendstolz/vulkano.git", rev = "5db99c837330f3a0656e9c6827a1fde24421465b" }
