[package]
name = "oxyfy"
version = "0.0.1"
authors = ["Viktor Lazarev <taurus101v@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.10"

[patch.crates-io]
"vulkano" = { git = "https://github.com/Abendstolz/vulkano.git", rev = "f83c3768ee692db786193c8c2e03413006ea8359" }
"vulkano-win" = { git = "https://github.com/Abendstolz/vulkano.git", rev = "f83c3768ee692db786193c8c2e03413006ea8359" }
"vulkano-shaders" = { git = "https://github.com/Abendstolz/vulkano.git", rev = "f83c3768ee692db786193c8c2e03413006ea8359" }
"vk-sys" = { git = "https://github.com/Abendstolz/vulkano.git", rev = "f83c3768ee692db786193c8c2e03413006ea8359" }
